[project]
name = "claude-client"
version = "0.1.0"
description = "Python client for the Claude.ai web API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.7",
]

[project.scripts]
claude-client = "claude_client.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_client"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["claude_client"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]
